ps-martek/ps-martek/OnlineMarketPlatform/product-service/Kubernetes/deploymentwithkafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: productservice
          image: keshavsignin/product-service:1.3
          ports:
            - containerPort: 8080
          #      imagePullSecrets:
          #        - name: psdocsecrert
          #          env:
          #            - name: TITLE
          #              value: "AKS Ingress Demo for Order service"
          env: # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: dbName
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: password
            - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
              value: "local-confluent-kafka-cp-kafka-headless:9092"
          resources:
            limits:
              cpu: "500m"
              memory: "1024Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
